cmake_minimum_required(VERSION 3.16)

set(EXECUTABLE_NAME "V-JBAN")

project(${EXECUTABLE_NAME} VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.5 COMPONENTS Gui Quick QuickControls2 Core REQUIRED)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_resources(IMAGE_RESOURCES images.qrc)

file(GLOB CPP_SOURCES *.cpp)
file(GLOB HPP_SOURCES *.h)

qt_add_executable(${EXECUTABLE_NAME}
    ${HPP_SOURCES}
    ${CPP_SOURCES}
    ${IMAGE_RESOURCES}
)

file(GLOB QML_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} qml/*.qml qml/pages/*.qml qml/controls/*.qml)
source_group("Qml Files" FILES ${QML_SOURCES})

qt_add_qml_module(${EXECUTABLE_NAME}
    URI ${EXECUTABLE_NAME}
    RESOURCE_PREFIX /
    VERSION 1.0
    QML_FILES ${QML_SOURCES}
)

set_target_properties(${EXECUTABLE_NAME} PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(${EXECUTABLE_NAME}
    PRIVATE Qt6::Quick
    PRIVATE Qt6::Core
    PRIVATE Qt6::Gui
    PRIVATE Qt6::QuickControls2
)

install(TARGETS ${EXECUTABLE_NAME}
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
